Add first pass of analyses

--- a/climate_analysis.ipynb
+++ b/climate_analysis.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,9 +80,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['measurement', 'station']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     " # We can view all of the classes that automap found\n",
     "Base.classes.keys()"
@@ -90,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,13 +128,77 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### \\*Design a query to retrieve the last 12 months of precipitation data and plot the results\\*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'FramePlotMethods' object has no attribute 'plot'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-50-d70ad36f9f7e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     37\u001b[0m \u001b[0mlast_12_months_x_axis\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlast_12_months_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"date\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     38\u001b[0m \u001b[0;31m# graph the results\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 39\u001b[0;31m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlast_12_months_x_axis\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlast_12_months_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"prcp\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'FramePlotMethods' object has no attribute 'plot'"
+     ]
+    }
+   ],
+   "source": [
+    "measurements = session.query(Measurement)\n",
+    "max_date = dt.datetime(2010,1,1)\n",
+    "\n",
+    "# first determine the date range that should be considered as the last 12 months\n",
+    "for measurement in measurements:\n",
+    "    year = int(measurement.date.split(\"-\")[0])\n",
+    "    month = int(measurement.date.split(\"-\")[1])\n",
+    "    day = int(measurement.date.split(\"-\")[2])\n",
+    "    # calculate the max date\n",
+    "    if dt.datetime(year,month,day) > max_date:\n",
+    "        max_date = dt.datetime(year,month,day)\n",
+    "\n",
+    "min_date = max_date - dt.timedelta(365)\n",
+    "# loop back through the data and store the precipitation data (column 'prcp') \n",
+    "# and date for the last 12 months prior to the max date in the dataset\n",
+    "date_list = []\n",
+    "prcp_list = []\n",
+    "for measurement in measurements:\n",
+    "    # check to see if date for current db row is within the last 12 months\n",
+    "    current_year = int(measurement.date.split(\"-\")[0])\n",
+    "    current_month = int(measurement.date.split(\"-\")[1])\n",
+    "    current_day = int(measurement.date.split(\"-\")[2])\n",
+    "    current_date = dt.datetime(current_year, current_month, current_day)\n",
+    "    # if current_date is less than or equal to max_date but greater than or equal to\n",
+    "    # min_date then it is within the range\n",
+    "    if current_date >= min_date and current_date <= max_date:\n",
+    "        date_list.append(current_date)\n",
+    "        prcp_list.append(measurement.prcp)\n",
+    "    \n",
+    "last_12_months_df = pd.DataFrame(\n",
+    "    {\n",
+    "        \"date\": date_list,\n",
+    "        \"prcp\": prcp_list\n",
+    "    }\n",
+    ")\n",
+    "\n",
+    "last_12_months_x_axis = len(last_12_months_df[\"date\"])\n",
+    "# graph the results\n",
+    "plt.plot(last_12_months_x_axis,last_12_months_df[\"prcp\"])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    " # Design a query to retrieve the last 12 months of precipitation data and plot the results\n",
-    "\n",
     "# Calculate the date 1 year ago from today\n",
     "\n",
     "# Perform a query to retrieve the data and precipitation scores\n",
@@ -229,6 +304,85 @@
     "# Use \"Trip Avg Temp\" as your Title\n",
     "# Use the average temperature for the y value\n",
     "# Use the peak-to-peak (tmax-tmin) value as the y error bar (yerr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate the rainfall per weather station for your trip dates using the previous year's matching dates.\n",
+    "# Sort this in descending order by precipitation amount and list the station, name, latitude, longitude, and elevation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Additional Analyses"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a query that will calculate the daily normals \n",
+    "# (i.e. the averages for tmin, tmax, and tavg for all historic data matching a specific month and day)\n",
+    "\n",
+    "def daily_normals(date):\n",
+    "    \"\"\"Daily Normals.\n",
+    "    \n",
+    "    Args:\n",
+    "        date (str): A date string in the format '%m-%d'\n",
+    "        \n",
+    "    Returns:\n",
+    "        A list of tuples containing the daily normals, tmin, tavg, and tmax\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    \n",
+    "    sel = [func.min(Measurement.tobs), func.avg(Measurement.tobs), func.max(Measurement.tobs)]\n",
+    "    return session.query(*sel).filter(func.strftime(\"%m-%d\", Measurement.date) == date).all()\n",
+    "    \n",
+    "daily_normals(\"01-01\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# calculate the daily normals for your trip\n",
+    "# push each tuple of calculations into a list called `normals`\n",
+    "\n",
+    "# Set the start and end date of the trip\n",
+    "\n",
+    "# Use the start and end date to create a range of dates\n",
+    "\n",
+    "# Stip off the year and save a list of %m-%d strings\n",
+    "\n",
+    "# Loop through the list of %m-%d strings and calculate the normals for each date"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load the previous query results into a Pandas DataFrame and add the `trip_dates` range as the `date` index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot the daily normals as an area plot with `stacked=False`"
    ]
   }
  ],
